<resources>
    <string name="app_name">spotify</string>

    <!-- Bottom navigation bar -->
    <string name="menu_rank">Classements</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_favorites">Favoris</string>

    <!-- Fragment : Ranks -->
    <string name="rank_tracks">Titres</string>
    <string name="rank_albums">Albums</string>

    <!-- Fragment : Search -->
    <string name="search_title">Rechercher</string>
    <string name="search_artists">Artistes</string>
    <string name="search_albums">Albums</string>
    <string name="search_hint">Recherche…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>